--- a/public/cars.html
+++ b/public/cars.html
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="js/app.js"></script>
-
-    <title>WAACD</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>Web Application ACME Car Dealership</title>
 </head>
 
 <body>
     <h1>This is a list of all the cars in storage</h1>
-    <div id="cars">
 
-    </div>
+    <div id="showCarsList"></div>
+
 </body>
 
 </html>
