--- a/public/cars.html
+++ b/public/cars.html
@@ -10,10 +10,23 @@
     <title>Web Application ACME Car Dealership</title>
 </head>
 
+<!-- 
+    Läsa url
+    hitta id med substring
+    sen jämföra substring med cars.json
+    sen skriva ut med på samma sät som den förra uppgiften
+ -->
+
 <body>
     <h1>This is a list of all the cars in storage</h1>
 
     <div id="showCarsList"></div>
+
+    <script>
+        function getURL() {
+            console.log("The URL of this page is: " + window.location.href);
+        }
+    </script>
 
 </body>
 
